test/tests/compiler/8_loops/invalid_semantics/extra_credit/undeclared_var_switch_expression.plx
pub fn main(none) i32 {
    #  test that variable resolution traverse the controlling epxression
    #  in switch statements
    match a {
        -> 1 {
            return 0
        }
        -> 2 {
            return true
        }
    }
    return false
}
